--- a/templates/main.html
+++ b/templates/main.html
@@ -1,15 +1,59 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Hello World!</title>
-</head>
-<body>
-    <div>
-         <p>
-            This is a test.
-         </p>
-         <button type="button" onclick="">Click Me!</button>
+{% extends "layout.html" %}
+{% block head %}
+    {{super()}}
+{% endblock %}
 
-    </div>
-</body>
-</html>
+{% block container %}
+    {{super()}}
+    <div id="top-carousel">
+         <h1>Bootstrap 3 Thumbnail Slider</h1>
+            <div id="myCarousel" class="carousel slide" data-interval="false">
+                <!-- Carousel items -->
+                <div class="carousel-inner">
+                    <!--/item-->
+                    {% for video_limit in videos %}
+                    <div class="item {{video_limit[0]}}">
+                        <div class="row">
+                            {% for item in video_limit[1:] %}
+                            <div class="col-xs-3"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" class="img-responsive"></a>
+                            {{item}}
+                            </div>
+                            {% endfor %}
+                        </div>
+                        <!--/row-->
+                    </div>
+                    {% endfor %}
+                </div>
+                <!--/carousel-inner-->
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev" hidden>‹</a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
+            </div>
+            <!--/myCarousel-->
+        </div>
+<script>
+$(document).ready(function() {
+    $('#myCarousel').on('slid.bs.carousel', function() {
+    	var $this = $(this);
+    	$this.children('.carousel-control').show();
+        if($('.carousel-inner .item:first').hasClass('active')) {
+            $this.children('.left.carousel-control').hide();
+        } else if($('.carousel-inner .item:last').hasClass('active')) {
+            $this.children('.right.carousel-control').hide();
+        }
+    });
+});
+
+</script>
+
+<style>
+    #top-carousel {
+        padding-top: 65px;
+        padding-left: 0px;
+        overflow: hidden;
+    }
+    .carousel-control {
+        padding-top:10%;
+        width:5%;
+    }
+</style>
+{% endblock %}
