--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,79 +13,23 @@
 <body>
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
-            <a id="navbar-logo" class="navbar-brand" href="#">Logo</a>
+            <a id="navbar-logo" class="navbar-brand" href="{{url_for('Main.main_page')}}">Logo</a>
                 <div class="row">
-                    <div id="search-wrapper" class="col-xs-5">
-                        <form id="search-bar-form" class="navbar-form navbar-left">
+                    <div id="search-wrapper">
+                        <form method="post" role="form" id="search-bar-form"
+                              action="{{url_for('Search.search_input')}}" class="navbar-form navbar-left">
                             <div class="form-group">
-                                <input id="search-bar-input" type="text" class="form-control" placeholder="Search">
+                                <input name="input" id="search-input" type="text" class="form-control" placeholder="Search">
                             </div>
-                                <button type="submit" class="btn btn-default">Submit</button>
                         </form>
                     </div>
-                    <a class="navbar-brand navbar-right" href="#">Profile</a>
+                    <a id="navbar-profile" class="navbar-brand navbar-right" href="#">Profile</a>
                 </div>
         </div><!-- /.container-fluid -->
 
     </nav>
-
-            <div class="nav-side-menu">
-                <div class="brand">Brand Logo</div>
-                    <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
-                    <div class="menu-list">
-                    <ul id="menu-content" class="menu-content collapse out">
-                        <li>
-                            <a href="#">
-                                <i class="fa fa-dashboard fa-lg"></i> Dashboard
-                            </a>
-                        </li>
-                        <li data-toggle="collapse" data-target="#products" class="collapsed active">
-                            <a href="#"><i class="fa fa-gift fa-lg"></i> UI Elements <span class="arrow"></span></a>
-                        </li>
-                        <ul class="sub-menu collapse" id="products">
-                            <li class="active"><a href="#">CSS3 Animation</a></li>
-                            <li><a href="#">General</a></li>
-                            <li><a href="#">Buttons</a></li>
-                            <li><a href="#">Tabs &amp; Accordions</a></li>
-                            <li><a href="#">Typography</a></li>
-                            <li><a href="#">FontAwesome</a></li>
-                            <li><a href="#">Slider</a></li>
-                            <li><a href="#">Panels</a></li>
-                            <li><a href="#">Widgets</a></li>
-                            <li><a href="#">Bootstrap Model</a></li>
-                        </ul>
-                        <li data-toggle="collapse" data-target="#service" class="collapsed">
-                            <a href="#"><i class="fa fa-globe fa-lg"></i> Services <span class="arrow"></span></a>
-                        </li>
-                        <ul class="sub-menu collapse" id="service">
-                            <li>New Service 1</li>
-                            <li>New Service 2</li>
-                            <li>New Service 3</li>
-                        </ul>
-
-
-                        <li data-toggle="collapse" data-target="#new" class="collapsed">
-                            <a href="#"><i class="fa fa-car fa-lg"></i> New <span class="arrow"></span></a>
-                        </li>
-                        <ul class="sub-menu collapse" id="new">
-                            <li>New New 1</li>
-                            <li>New New 2</li>
-                            <li>New New 3</li>
-                        </ul>
-                        <li>
-                            <a href="#">
-                                <i class="fa fa-user fa-lg"></i> Profile
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa fa-users fa-lg"></i> Users
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="container" id="main">
+            <!--</div>-->
+            <div id="main">
                 {% block container %}
                 {% endblock %}
             </div>
@@ -96,7 +40,12 @@
     }
 
     /*  ---------- MAIN ---------- */
-
+    #main {
+        width: 1200px;
+        margin-left: 75px;
+        padding-top: 75px;
+        max-width: 1200px;
+    }
 
     /*  ---------- SIDE NAVBAR ---------- */
 
@@ -240,7 +189,6 @@
         display: block;
       }
 
-
     body {
       margin: 0px;
       padding: 0px;
@@ -249,16 +197,39 @@
     a#navbar-logo {
         padding-right: 75px;
         padding-left: 75px;
+        float: left;
     }
 
     /*  --- SEARCH BAR --- */
     #search-bar-form {
         width: 100%;
         padding-left: 0px;
+        padding-top: 0px;
+        padding-bottom: 0px;
     }
     #search-bar-form .form-group {
         width: 80%;
     }
+    #navbar-profile {
+        margin-right: 10px;
+        float: right;
+    }
+    #search-wrapper {
+        float: left;
+        display: inline-block;
+        max-width: 500px;
+        width: 50%;
+    }
+    .navbar-form {
+        border: None;
+    }
 
+    @media screen and (max-width: 650px) {
+        .navbar .container-fluid {
+            width: 700px;
+            overflow: hidden;
+        }
+
+    }
 </style>
 </html>
