--- a/templates/main.html
+++ b/templates/main.html
@@ -6,17 +6,27 @@
 {% block container %}
     {{super()}}
     <div id="top-carousel">
-         <h1>Bootstrap 3 Thumbnail Slider</h1>
-            <div id="myCarousel" class="carousel slide" data-interval="false">
+        {% for video_row in videos_list %}
+         <h4>{{video_row['category']}}</h4>
+            <div id="myCarousel{{loop.index}}" class="carousel slide" data-interval="false">
                 <!-- Carousel items -->
-                <div class="carousel-inner">
+                <div class="carousel-inner {{loop.index}}">
                     <!--/item-->
-                    {% for video_limit in videos %}
-                    <div class="item {{video_limit[0]}}">
-                        <div class="row">
-                            {% for item in video_limit[1:] %}
-                            <div class="col-xs-3"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" class="img-responsive"></a>
-                            {{item}}
+                    {% for videos in video_row['videos'] %}
+                    <div class="item {{videos[0]}}">
+                        <div class="videos-row-wrapper">
+                            {% for item in videos[1:] %}
+                            <div class="video-wrapper">
+                                <a href="{{url_for('Drilldown.drill_down', category=item)}}" class="thumbnail">
+                                    <img src="http://placehold.it/250x250" alt="Image" class="img-responsive">
+                                    <p class="video-category">A DAY IN THE LIFE</p>
+                                    <p class="video-title">Construction worker</p>
+                                    <a class="video-company-link" href="{{url_for('Drilldown.drill_down')}}">
+                                        <p class="video-company">Company A</p>
+                                    </a>
+                                    <p class="video-views">10k views</p>
+                                    <p class="video-date">2 months ago</p>
+                                </a>
                             </div>
                             {% endfor %}
                         </div>
@@ -25,19 +35,26 @@
                     {% endfor %}
                 </div>
                 <!--/carousel-inner-->
-                <a class="left carousel-control" href="#myCarousel" data-slide="prev" hidden>‹</a>
-                <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
+                <div class="left carousel-control {{loop.index}}" href="#myCarousel{{loop.index}}" data-slide="prev" hidden>
+                    <a >‹</a>
+                </div>
+                <div class="right carousel-control {{loop.index}}" href="#myCarousel{{loop.index}}" data-slide="next">
+
+                    <a>›</a>
+                </div>
             </div>
             <!--/myCarousel-->
+        {% endfor %}
         </div>
 <script>
-$(document).ready(function() {
-    $('#myCarousel').on('slid.bs.carousel', function() {
+$( document ).ready(function() {
+    $("[id^='myCarousel']").on('slid.bs.carousel', function() {
     	var $this = $(this);
     	$this.children('.carousel-control').show();
-        if($('.carousel-inner .item:first').hasClass('active')) {
+    	var $inner = $this.children('.carousel-inner');
+        if($inner.children('.item:first').hasClass('active')) {
             $this.children('.left.carousel-control').hide();
-        } else if($('.carousel-inner .item:last').hasClass('active')) {
+        } else if($inner.children('.item:last').hasClass('active')) {
             $this.children('.right.carousel-control').hide();
         }
     });
@@ -46,14 +63,71 @@ $(document).ready(function() {
 </script>
 
 <style>
+    /*  ---------- CAROUSEL ---------- */
     #top-carousel {
-        padding-top: 65px;
         padding-left: 0px;
         overflow: hidden;
     }
     .carousel-control {
-        padding-top:10%;
-        width:5%;
+        padding-top: 70px;
+        width: 50px;
+        height: 180px;
     }
+    .carousel {
+        --carousel-row: 1000px;
+        display: inline-block;
+    }
+
+    /*  ---------- VIDEOS ---------- */
+    .videos-row-wrapper {
+        overflow-x: hidden;
+        width: 100%;
+    }
+    .video-wrapper p {
+        margin-bottom: 0px;
+    }
+    .video-wrapper a, .video-wrapper a:hover {
+        color: black;
+        text-decoration: none;
+    }
+    .video-category, .video-company, .video-views, .video-date {
+        color: #A9A9A9;
+    }
+    .video-views {
+        float: left;
+        margin-right: 5px;
+    }
+    .video-wrapper {
+        width: 210px;
+        height: 200px;
+        display: inline-block;
+    }
+    .video-wrapper:first {
+        margin-left: 0px;
+    }
+    .video-wrapper:last {
+        margin-right: 0px;
+    }
+    /*  ---------- VIDEO DETAILS ---------- */
+    .video-company-link {
+        z-index: 99;
+    }
+    .video-company-link p:hover {
+        font-weight: bold;
+    }
+
+    /*  ---------- VIDEO THUMBNAIL ---------- */
+    .thumbnail img {
+        height: 180px;
+        margin: 0px;
+
+    }
+    .thumbnail {
+        -webkit-box-shadow: 0 0 0;
+        box-shadow: 0 0 0;
+        padding: 0px;
+        border: 0;
+
+
 </style>
 {% endblock %}
