--- a/templates/results.html
+++ b/templates/results.html
@@ -13,23 +13,42 @@
         <div class="results-wrapper">
             <a href="{{url_for('Drilldown.drill_down')}}" class="results-thumbnail">
                 <img src="http://placehold.it/250x250" alt="Image" class="img-responsive">
-                <div class="results-details-wrapper">
+            </a>
+            <div class="results-details-wrapper">
+                <a href="{{url_for('Drilldown.drill_down')}}">
                     <p class="results-category">HOW I GOT HERE</p>
                     <b><p class="results-title">Registered nurse @ Toronto General Hospital</p></b>
                     <p class="results-description">This is a short description of the video that
                         is being placed beside this almost perfectly dimensioned thumbnail of a lovely educational video
-                        . herp derp.</p>
-                    <p class="results-company"> Toronto General Hospital</p>
-                    <p class="results-views">10k views</p>
+                        . herp derp.
+                    </p>
+                </a>
+                <a class="video-company-link" href="{{url_for('Organization.org_profile')}}">
+                    <p class="results-company">Toronto General Hospital</p>
+                </a>
+                <a href="{{url_for('Drilldown.drill_down')}}">
                     <p class="results-date">2 months ago</p>
-                </div>
-            </a>
+                    <p class="divider"> &nbsp&nbsp | &nbsp&nbsp </p>
+                    <p class="results-views">10k views</p>
+                </a>
+            </div>
         </div>
     </div>
 
 
 <style>
+    #results-container {
+        padding-top: 150px;
+        padding-left: 75px;
+    }
     /*  ---------- VIDEOS ---------- */
+    .video-company-link {
+        position: relative;
+        z-index: 99;
+    }
+    .video-company-link:hover {
+        font-weight: bold;
+    }
     .results-thumbnail {
         float: left;
         display: inline-block;
@@ -37,16 +56,19 @@
     }
     .results-thumbnail img {
         float: left;
-        height: 180px;
+        height: 160px;
+        width: 300px;
     }
     .results-details-wrapper {
         float: left;
         display: inline-block;
         width: 500px;
-        padding: 20px 0px 0px 10px;
+        padding: 10px 0px 0px 10px;
     }
     .results-wrapper {
-        height: auto;
+        width: 100%;
+        float: left;
+        display: block;
     }
     .results-row-wrapper {
         overflow-x: hidden;
@@ -58,15 +80,19 @@
         color: black;
         text-decoration: none;
     }
-    .results-category, .results-company, .results-views, .results-date {
+    .results-category, .results-company, .results-date, .results-views, .results-description,
+        .divider {
         color: #A9A9A9;
     }
-    .results-views, .results-company {
+    .results-views, .results-date, p.divider {
+        float: right;
+    }
+    .results-company {
+        padding-right: 0px;
         float: left;
-        margin-right: 15px;
     }
     p.results-description {
-        margin-bottom: 20px;
+        height: 60px;
     }
 
     /*  ---------- VIDEO THUMBNAIL ---------- */
