--- a/templates/org_profile.html
+++ b/templates/org_profile.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+
 {% block head %}
     {{super()}}
 {% endblock %}
@@ -26,11 +27,8 @@
                 <p> description here</p>
             </div>
 
-
-
         </div>
     </div>
-
 
 <style>
     #org-profile-wrapper {
@@ -40,6 +38,7 @@
     }
     #org-profile-content-wrapper {
         padding-left: 75px;
+        padding-right: 75px;
         padding-top: 30px;
         width: 100%;
         height: 100%;
@@ -57,7 +56,7 @@
         float: left;
         display: block;
         width: 100%;
-        height: 280px;
+        height: 300px;
     }
     #org-profile-banner img {
         height: 100%;
@@ -67,11 +66,5 @@
         display: inline-block;
         float: left;
     }
-
-
 </style>
-
-
-
-
 {% endblock %}
