a few small changes

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -198,8 +198,18 @@
             </div>
 </body>
 <style>
+    @font-face {
+        font-family: quicksand;
+        src: url('Quicksand-Light.otf');
+    }
+    html {
+        font-family: 'quicksand';
+    }
     html, body, nav-side-menu {
         height: 100%;
+    }
+    #main {
+        width: 1420px;
     }
     /*  ---------- SIDE NAVBAR ---------- */
 
@@ -347,6 +357,7 @@
       margin: 0px;
       padding: 0px;
     }
+
     /*  ---------- TOP NAVBAR ---------- */
     a#navbar-logo {
         padding-right: 75px;
